Fixed openbtn shifting issue

--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,22 @@
     --offset: rgb(11, 13, 34);
     --menu: rgba(0, 0, 0, 0.778);
     --transparent: rgba(0, 0, 0, 0);
+    --light-grey: #b2b3b5;
+}
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 * {
-    font-family: Helvetica;
+    font-family: "Outfit", Arial;
     background-color: var(--main-color);
-    color: #b2b3b5;
+    color: var(--light-grey);
 }
 
 html {
@@ -29,6 +39,7 @@ header {
     display: flex;
     position: relative;
     justify-content: center;
+    padding-bottom: 10px;
     margin-bottom: 50px;
     border-bottom: 1px solid #b2b3b5;
 }
@@ -37,9 +48,28 @@ h1 {
     opacity: 0;
     height: 80px;
     line-height: 80px;
+    font-size: 2.5em;
     color: var(--accent-color);
     letter-spacing: 0.15rem;
     text-align: center;
+    font-family: "Outfit", Arial;
+}
+
+#index-page-title {
+    background-color: #171f2ca4;
+    border: solid var(--accent-color) 2px;
+    padding-inline: 25px;
+    border-radius: 10px;
+    opacity: 1;
+}
+
+#index-page-title:hover {
+    cursor: pointer;
+}
+
+#index-page-title:active {
+    color: var(--light-grey);
+    background-color: var(--accent-color);
 }
 
 #indexH2 {
@@ -51,18 +81,33 @@ h1 {
     position: absolute;
     transition: margin-left .5s;
     height: 100%;
-    right: 15px;
-    margin-right: 15px;
+    left: 15px;
+    margin-left: 15px;
     padding-top: 30px;
     box-sizing: border-box;
   }
 
 #openbtn {
-    font-size: 40px;
+    font-size: 3em;
     cursor: pointer;
     color: #b2b3b5;
     border: none;
     background-color: #75c6fc00;
+}
+
+#index-main-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+#generate-btn {
+    height: 3em;
+    width: 15em;
+    margin-bottom: 2em;
+    font-size: 1em;
+    border-radius: 10px;
 }
 
 #dragHandle {
@@ -87,10 +132,14 @@ legend {
     margin-bottom: 30px;
 }
 
-table {
+#meals-table {
     margin: auto;
-    z-index: -1;
+    min-height: 30em;
+    min-width: 45em;
+    /* z-index: -1; */
     /* Prevents table lines interfering with other elements on page */
+    opacity: 1;
+    margin-bottom: -30px;
 }
 
 #meals-number {
@@ -119,42 +168,13 @@ legend {
     color: var(--accent-color);
 }
 
-.numBtn {
-    opacity: 0;
-    height: 40px;
-    width: 80px;
-    font-size: 14px;
-    font-weight: bold;
-    border-radius: 10px;
-    border: 1px solid var(--accent-color);
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin: 10px;
-    color: var(--accent-color);
-}
-
-.numBtn:active {
-    color: var(--main-color);
-    background-color: var(--accent-color);
-}
-
-.num-btn:hover {
-    color: var(--main-color);
-    background-color: var(--accent-color);
-}
-
-#meals-table {
-    /* position: relative; */
-    margin-bottom: -30px;
-}
-
-
 td {
     vertical-align: top;
 }
 
-.ingredientsText {
-    padding-bottom: 30px;
-    opacity: 0;
+.dayOfWeek {
+    font-size: 2em;
+    padding-right: 4em;
 }
 
 .mealText {
@@ -162,27 +182,35 @@ td {
     font-weight: 600;
     padding-bottom: 8px;
     opacity: 0;
+    font-size: 2em;
+    letter-spacing: 2.5px;
+}
+
+.ingredientsText {
+    padding-bottom: 30px;
+    opacity: 0;
+    font-size: 1.3em;
 }
 
 #char {
     margin-left: 10px;
 }
 
-.sidebar {
+#mySidebar {
     height: 100%;
     width: 0;
     position: absolute;
     z-index: 1;
     top: 0;
     bottom: 0;
-    right: 0;
+    left: 0;
     background-color: var(--main-color);
     overflow-x: hidden; /* Disable horizontal scroll */
     transition: 0.3s;
     text-wrap: nowrap;
   }
   
-  .sidebar a{
+  #mySidebar a{
     padding: 25px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
@@ -195,11 +223,11 @@ td {
     padding-top: 70px;
   }
 
-  .sidebar a:hover {
+  #mySidebar a:hover {
     color: #7e8d9b;
   }
   
-  .sidebar .closebtn {
+  #mySidebar .closebtn {
     position: absolute;
     top: 0;
     right: 25px;
@@ -417,6 +445,11 @@ main {
 
 .rotate {
     transition: transform 0.3s ease-in;
+}
+
+
+#about-title {
+    opacity: 0;
 }
 
 
